--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
         - alias1.test.net
         - alias2.test.net
     ports:
-    - 80:80
+    - $PORT0:80
     - 443:443
 
 networks:
